# devnot-summit-2023

./: .gitignore  README.md
Samples/000 - hello-world/version_1/: Cargo.toml
Samples/001 - rust_vs_cplusplus/: Readme.md
Samples/006 - some cookies/cannot_borrow/: Cargo.toml
Samples/006 - some cookies/excp_mut_ref/: Cargo.toml
Samples/006 - some cookies/macro_sample/: Cargo.toml
Samples/006 - some cookies/move_with_ref/: Readme.md
Samples/009 - tiny service/norris-api/: Cargo.toml
dnc2023-samples/: Cargo.toml  Readme.md
dnc2023-samples/000 - hello-world/version_2/: Cargo.toml
dnc2023-samples/000 - hello-world/version_2/src/: main.rs
dnc2023-samples/000 - hello-world/version_3/: Cargo.toml
dnc2023-samples/000 - hello-world/version_3/src/: main.rs
dnc2023-samples/001 - rust_vs_cplusplus/: double_frees_02.cpp  use_after_frees_01.cpp
dnc2023-samples/002 - oop/type_state_builder/: Readme.md
dnc2023-samples/002 - oop/type_state_builder/src/: main.rs
dnc2023-samples/003 - gaming/on-my-way/: Readme.md
dnc2023-samples/003 - gaming/on-my-way/src/game/missile/: systems.rs
dnc2023-samples/004 - tinyboard/: README.md  Rust - TinyBoard Project.postman_collection.json
dnc2023-samples/004 - tinyboard/tiny-board-api/: .env  Cargo.toml
dnc2023-samples/004 - tinyboard/tiny-board-api/migration/: Cargo.toml
dnc2023-samples/004 - tinyboard/tiny-board-api/src/: main.rs  test.rs
dnc2023-samples/004 - tinyboard/tiny-board-api/src/entity/: mod.rs  work_item.rs
dnc2023-samples/004 - tinyboard/tiny-board-api/src/handler/: mod.rs  prelude.rs
dnc2023-samples/004 - tinyboard/tiny-board-api/src/repository/: mod.rs  work_items.rs
dnc2023-samples/004 - tinyboard/tiny-board-app/: README.md  electron-builder.yml  package-lock.json  package.json
dnc2023-samples/004 - tinyboard/tiny-board-app/src/renderer/: index.html
dnc2023-samples/004 - tinyboard/tiny-board-app/src/renderer/src/components/: WorkItemForm.vue  WorkItemList.vue
dnc2023-samples/005 - reverse proxy/: Readme.md
dnc2023-samples/006 - some cookies/cannot_borrow/src/: main.rs
dnc2023-samples/006 - some cookies/excp_mut_ref/src/: main.rs
dnc2023-samples/006 - some cookies/move_with_ref/: Cargo.toml  Readme.md
dnc2023-samples/006 - some cookies/mrsw/: Cargo.toml
dnc2023-samples/006 - some cookies/mrsw/src/: main.rs
dnc2023-samples/008 - http server/crayz_server/: Readme.md
dnc2023-samples/010 - macro sample/macro_sample/src/: main.rs
dnc2023-samples/011 - be functional/sample/src/: main.rs
dnc2023-samples/012 - strong type system/csharp_sample/: Program.cs
dnc2023-samples/012 - strong type system/rust_sample/: Cargo.toml
dnc2023-samples/012 - strong type system/rust_sample/src/: main.rs
(+12 files in other folders)
