[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.11.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.

#    Bu kısımlar yorum satırı idi. Migration çalıştırmak için açıldı.
#    Ancak bu kısımlar açıkken ana projeyi build etmek istediğimizde
#    aşağıdaki feature'ların zaten kullanımda olduğu ifade ediliyor.
#    Bu nedenle tekrar kapattım.
#   "runtime-actix-native-tls",  # `ASYNC_RUNTIME` feature
#   "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
